syntax = "proto3";
package inout;

// Roles API

message CreateRoleRequestV1 {
    string title = 1;
}

message CreateRoleBadRequestV1 {
    repeated string title = 1;
}

message GetRoleResponseV1 {
    int64 id = 1;
    int64 created = 2;
    string title = 3;
}

message ListRoleResponseV1 {
    repeated GetRoleResponseV1 data = 1;
}

// Emails API

message CreateEmailRequestV1 {
    string email = 1;
    string code = 2;
    int64 user_id = 3;
}

message CreateEmailBadRequestV1 {
    repeated string email = 1;
    repeated string code = 2;
    repeated string user_id = 3;
}

message CreateEmailResponseV1 {
    int64 id = 1;
    int64 created = 2;
    int64 user_id = 3;
    string email = 4;
}

// Emails Confirmation API

message CreateEmailConfirmationRequestV1 {
    string email = 1;
}

message CreateEmailConfirmationBadRequestV1 {
    repeated string email = 1;
}

message CreateEmailConfirmationResponseV1 {
    int64 created = 1;
    int64 expire = 2;
    string email = 3;
}

// Phones API

message CreatePhoneRequestV1 {
    string phone = 1;
    string code = 2;
    int64 user_id = 3;
}

message CreatePhoneBadRequestV1 {
    repeated string phone = 1;
    repeated string code = 2;
    repeated string user_id = 3;
}

message CreatePhoneResponseV1 {
    int64 id = 1;
    int64 created = 2;
    int64 user_id = 3;
    string phone = 4;
}

// Phones Confirmation API

message CreatePhoneConfirmationRequestV1 {
    string phone = 1;
}

message CreatePhoneConfirmationBadRequestV1 {
    repeated string phone = 1;
}

message CreatePhoneConfirmationResponseV1 {
    int64 created = 1;
    int64 expire = 2;
    string phone = 3;
}

// Passwords API

message CreatePasswordRequestV1 {
    int64 user_id = 1;
    string value = 2;
}

message CreatePasswordBadRequestResponseV1 {
    repeated string user_id = 1;
    repeated string value = 2;
}

message CreatePasswordResponseV1 {
    int64 id = 1;
    int64 created = 2;
    int64 user_id = 3;
}

// Users API

message CreateUserRequestV1 {
    string password = 1;
    string phone = 2;
    string email = 3;
    string phoneCode = 4;
    string emailCode = 5;
}

message CreateUserBadRequestV1 {
    repeated string password = 1;
    repeated string phone = 2;
    repeated string email = 3;
    repeated string phoneCode = 4;
    repeated string emailCode = 5;
    repeated string errors = 6;
}

message GetUserResponseV1 {
    int64 id = 1;
    int64 created = 2;
}

message ListUserResponseV1 {
    repeated GetUserResponseV1 data = 1;
}

// User Views API

message GetUserViewResponseV1 {
    int64 id = 1;
    int64 created = 2;
    repeated string roles = 3;
    repeated string phones = 4;
    repeated string emails = 5;
}

message ListUserViewResponseV1 {
    repeated GetUserViewResponseV1 data = 1;
}

// Events

message CreateEmailConfirmationEventV1 {
    string email = 1;
    string code = 2;
}

message CreatePhoneConfirmationEventV1 {
    string phone = 1;
    string code = 2;
}

message ChangedUserViewsEventV1 {
    repeated int64 identifiers = 1;
}

message Event {
    string sender = 1;
    string object = 2;
    string action = 3;
    string event_version = 4;
    string data_version = 5;
    oneof data {
        CreatePhoneConfirmationEventV1 phoneConfirmationEvent = 6;
        CreateEmailConfirmationEventV1 emailConfirmationEvent = 7;
        ChangedUserViewsEventV1 changedUserViewsEvent = 8;
    }
}